# dj-queue-health

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
src/dj_queue_health/: __init__.py  apps.py
src/dj_queue_health/management/commands/: test_queue_health.py  update_queue_timestamp.py
tests/: settings.py  test_version.py
