[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "dj_queue_health"
dist-name = "dj_queue_health"
author = "Yasser Tahiri"
author-email = "yasserth19@gmail.com"
home-page = "https://github.com/yezz123/dj-queue-health"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Natural Language :: English",
        "Framework :: Django",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Internet :: WWW/HTTP :: Session",
        "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
        "Topic :: Utilities",
        "Typing :: Typed",
]
description-file = "README.md"
requires-python = ">=3.8"
requires = [
    "Django",
    "django_rq",
    "celery"
]

[tool.flit.metadata.requires-extra]
dev = [
    "pre-commit==2.19.0",
    "pytest",
    "pytest-django",
]